# mage-artifact

./: README.md
mage-kernel/: .gitignore  .gitmodules  README.md
mage-kernel/apps/memcached/: Makefile
mage-kernel/apps/memcached-hotos/: test-one.zsh  test-ssh-wrapper.zsh
mage-kernel/apps/metis/: README.md  fhscan.test-ssh.zsh  memscan.test-ssh.zsh  module.py  test-one.zsh  usr.manifest
mage-kernel/apps/page-rank/: Makefile  kron-memscan.test-ssh.zsh  run-benchmark.zsh  test-kron.ssh.zsh  test-one.zsh  twitter-fhscan.test-ssh.zsh  twitter-memscan.test-ssh.zsh
mage-kernel/apps/pan-microbench/: CMakeLists.txt  page_fault.cc
mage-kernel/apps/sequential-cksum/: .test-one.zsh.swp  test-one.zsh  test-ssh-wrapper.zsh  test-ssh.zsh  test_mltthrd.c
mage-kernel/apps/sequential-read/: run-benchmark.zsh  test-one.zsh  test-ssh.zsh
mage-kernel/apps/sequential-read-lat-breakdown/: .gitignore  run-benchmark.zsh  test-one.zsh  test-ssh.zsh  test_mltthrd.c
mage-kernel/apps/sequential-write/: test-one.zsh  test-ssh-wrapper.zsh  test-ssh.zsh  test_mltthrd.c
mage-kernel/apps/webfrontend/: test-one.zsh  test-ssh.zsh
mage-kernel/apps/webfrontend/webfrontend/: .gitignore  CMakeLists.txt  web_frontend.cpp
mage-kernel/apps/webfrontend/webfrontend/include/: spinlock.h
mage-kernel/apps/webfrontend/webfrontend/snappy/: .gitignore
mage-kernel/apps/webfrontend/webfrontend/snappy/cmake/: .gitignore
mage-kernel/apps/webfrontend/webfrontend/src/: local_concurrent_hopscotch.cpp  slab.cpp
mage-kernel/apps/xsbench/: run-benchmark.zsh  test-one.zsh  test-ssh.zsh
mage-kernel/doc/: cluster-vm-setup.md  compute-node-setup.md  frontend-setup.md  memory-node-setup.md  reproducing-paper-evals.md  scripts-setup.md
mage-kernel/frontend/: .gitignore  CMakeLists.txt  README.md  build_mind_ctrl.sh  builder  mind_ctrl_utils.hpp  restart_mind_ctrl.sh  run_mind_ctrl.sh
mage-kernel/frontend/configs/: config_switch1.json  config_switch2.json  config_switch3.json
mage-kernel/frontend/libuser/: CMakeLists.txt
mage-kernel/frontend/libuser/librpc/: CMakeLists.txt
mage-kernel/frontend/libuser/librpc/src/: MindUser.cpp  MindUser.h  MindUser.tcc  MindUserClient.h  MindUserServer.cpp  MindUserServer.h  rpc_constants.cpp  rpc_constants.h  rpc_types.h  rpc_types.tcc  testUser.cpp
mage-kernel/frontend/libuser/thrift/: CMakeLists.txt
mage-kernel/frontend/libuser/thrift/src/: rpc.thrift
mage-kernel/frontend/mind_ctrl_server/: .gitignore  CMakeLists.txt  main.cpp  server.cpp  server.h
mage-kernel/frontend/mind_ctrl_thrift/: .gitignore  CMakeLists.txt  install_thrift.sh  mind_bf.thrift  mind_ctrl.thrift
mage-kernel/frontend/mind_ctrl_webui/: dummy.py  package-lock.json  package.json  readme.md
mage-kernel/frontend/mind_ctrl_webui/pages/: ClusterManagementPanel.tsx  _app.tsx  cluster.tsx  index.tsx
mage-kernel/frontend/mind_ctrl_webui/pages/api/: upload.ts
mage-kernel/frontend/mind_ctrl_webui/pages/api/cluster/: [clusterId].ts
mage-kernel/frontend/mind_ctrl_webui/pages/api/run_script/: [scriptName].ts
mage-kernel/frontend/program_logs/: .gitignore
mage-kernel/frontend/scripts/: 09a_install_hiredis.sh  09b_install_redis_v7.sh  attach_gdb.sh  reset_mind_ctrl  reset_mind_redis
mage-kernel/frontend/tna_disagg_switch_base/: .gitignore  CMakeLists.txt  disagg_bf_client.cpp  disagg_bf_client.hpp  disagg_logging_keys.hpp  disagg_pkt_record.cpp  disagg_pkt_record.hpp  disagg_switch.cpp  disagg_switch.hpp  disagg_switch_config.cpp  disagg_switch_config.hpp
mage-kernel/frontend/tna_disagg_switch_base/controller/: MindAccess.c  MindAccess.h  cache_manager_thread.c  cache_manager_thread.h  cacheline_manager.c  cacheline_manager.h  config.h  controller.c  controller.h  controller_tests.c  debug.c  debug.h  dummy_bf.c  fault.h  kshmem.c  kshmem.h  memory_management.c  memory_management.h  memory_node_connect.c  mmap_ftns.c  mmap_unmapped_area.c  pid_ns.c  pid_ns.h  rbtree_ftns.c  remote_thread_management.c  request_handler.c  request_handler.h  sys_x86_64.c  task_management.c  task_management.h
mage-kernel/frontend/tna_disagg_switch_base/redis_logger/: redis_logger.c  redis_logger.h
mage-kernel/mem-server/: .gitignore  Makefile  clean_rdma_client.c  clean_rdma_server.c  hashmap.c  hashmap.h  hashmap_test.c  rdma_buffer_test.c  rdma_client.c  rdma_client.h  rdma_common.c  rdma_common.h  rdma_server.c  rdma_server.h
mage-kernel/mind_linux/: .gitignore  Makefile  build_kernel.sh  build_kernel_and_modules.sh  build_kernel_modules.sh
mage-kernel/scripts/: .gitignore  config.sh
mage-libos/: .gitignore  README.md  install-deps.sh  remote.sh  run.sh  setup-compute.sh  setup-remote.sh
mage-libos/apps/hashtable/: CMakeLists.txt  Makefile  module.py  usr.manifest  web_frontend.cpp
mage-libos/apps/hashtable/include/: helpers.hpp  local_concurrent_hopscotch.hpp  slab.hpp  spinlock.h
mage-libos/apps/hashtable/snappy/: CMakeLists.txt
mage-libos/apps/hashtable/src/: spinlock.cpp
mage-libos/apps/rdma_bench/: CMakeLists.txt  mage_noeviction.cc  rdma_bw.cc  rdma_rw_bw.cc
mage-libos/dilos/: Makefile  loader.cc  runtime.cc
mage-libos/qemu/: configure
mage-libos/rdma_monitor/: Makefile  rdma_monitor.c  rdma_monitor.h
mage-libos/scripts/: bench-breakdown.sh  bench-gapbs-4cores.sh  bench-gapbs-batch.sh  bench-gapbs-hermit.sh  bench-gapbs-local.sh  bench-gapbs.sh  bench-gups.sh  bench-mage-noeviction.sh  bench-memcached-a.sh  bench-memcached-b.sh  bench-memcached-hermit.sh  bench-microbench.sh  bench-minorfault-local.sh  bench-minorfault.sh  bench-rdma.sh  bench-seq-scan.sh  bench-webfrontend.sh  bench-wr-hermit.sh  bench-wr-new.sh  bench-wr.sh  bench-xsbench.sh  config-bench.sh  download-dataset.sh  get_rss.sh  parse-breakdown-mage-libos.sh  parse-gapbs-4cores-mage-libos.sh  parse-gapbs-batch-mage-libos.sh  parse-gapbs-mage-libos.sh  parse-gups-mage-libos.sh  parse-memcached-a-mage-libos.sh  parse-memcached-b-mage-libos.sh  parse-microbench-mage-libos.sh  parse-seq-scan-mage-libos.sh  parse-wr-mage-libos.sh  parse-xsbench-mage-libos.sh  pin-vcpu-half.py  pin-vcpu.py  prepare-disk.sh  vmexit.sh
(+260 files in other folders)
