project(bench C CXX)
cmake_minimum_required(VERSION 3.20)

FILE(GLOB SRCS *.c *.cc)

set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 11)

set(CMAKE_SKIP_BUILD_RPATH TRUE)

include_directories(../../dilos/include)

# add_subdirectory(../../dummy dummy)

get_filename_component(dummy_path ../../dilos/build/last REALPATH)
link_directories(${dummy_path})

get_filename_component(remote_path ../../build/remote REALPATH)
link_directories(${remote_path}/lib ${remote_path}/driver)

get_filename_component(HELPER helper.cc REALPATH)

file(WRITE usr.manifest "")
foreach(src ${SRCS})
    if(${src} MATCHES "helper.cc")
        continue()
    endif()
    message("src is ${src}")
    get_filename_component(target "${src}" NAME_WE)
    set(src ${src} ${HELPER})

    message("After change: ${src}")
    add_executable(${target} ${src})
    target_link_libraries(${target} osv)
    file(APPEND usr.manifest "/${target}: ${CMAKE_BINARY_DIR}/${target}\n")
    target_compile_options(${target} PRIVATE -fPIC)
endforeach()
add_executable(rdma_bw_nonosv rdma_bw.cc helper.cc)
add_executable(rdma_rw_bw_nonosv rdma_rw_bw.cc helper.cc)
target_link_libraries(rdma_bw_nonosv remote_rdma)
target_link_libraries(rdma_bw_nonosv ibverbs)
target_link_libraries(rdma_bw_nonosv mlx5)
target_link_libraries(rdma_bw_nonosv nonosv)
target_compile_definitions(rdma_bw_nonosv PRIVATE NONOSV)
target_include_directories(rdma_bw_nonosv PRIVATE ../../remote/include)
target_link_libraries(rdma_rw_bw_nonosv remote_rdma)
# target_link_libraries(rdma_rw_bw_nonosv /home/yupan/dilos-artifact/build/rdma-core/lib/statics/libibverbs.a)
# target_link_libraries(rdma_rw_bw_nonosv /home/yupan/dilos-artifact/build/rdma-core/util/librdma_util.a)
# target_link_libraries(rdma_rw_bw_nonosv /home/yupan/dilos-artifact/build/rdma-core/ccan/libccan.a)
# target_link_libraries(rdma_rw_bw_nonosv /home/yupan/dilos-artifact/build/rdma-core/lib/statics/libmlx5.a)
target_link_libraries(rdma_rw_bw_nonosv /home/yupan/rdma-core/build/lib/statics/libmlx5.a)
target_link_libraries(rdma_rw_bw_nonosv /home/yupan/rdma-core/build/lib/statics/libibverbs.a)
target_link_libraries(rdma_rw_bw_nonosv /home/yupan/rdma-core/build/ccan/libccan.a)
target_link_libraries(rdma_rw_bw_nonosv /home/yupan/rdma-core/build/util/librdma_util.a)
#target_link_libraries(rdma_rw_bw_nonosv ibverbs)
#target_link_libraries(rdma_rw_bw_nonosv mlx5)
target_link_libraries(rdma_rw_bw_nonosv nonosv)
target_compile_definitions(rdma_rw_bw_nonosv PRIVATE NONOSV)
target_include_directories(rdma_rw_bw_nonosv PRIVATE ../../remote/include)